
search should use <= and >= for AT MOST and AT LEAST

added support for sharing generic media types

fixes to compile under Red Hat Linux 6.0 (Alpha)

added -l option to opennap and metaserver to specify a specific ip to listen
on for incoming connections instead of any device

fixes to compile cleanly without debugging enabled (not recommended at this
point)

Changes from 0.09
=================

added `max_user_channels' as a configuration option

added additional integrity checking to the validate_*() functions in
debug mode

server variables can be dynamically changed using the 810 client message
(colten edwards)

login() should ensure that the given speed is in the 0-10 range

search() was sending the host using %d instead of %lu

server_connect() should check the return from split_line() to get the number
of arguments

metaserver should write a \n after the ip:port

send_queued_data() should return without doing anything if there is no data
to send

added check for /dev/random and substitute simple random number generation
on systems without it

added support for the server version (801) client request

added support for the server reconfig (800) client request

added client_queue_length and server_queue_length config variables to tune the
maximum queue lengths allowed

fixed resume messages which used broken sequences %ul and %uh

added max_results server config variable to control the maximum number of
matches returned on a client search

added compressed data packet (10200) for sending compressed messages between
servers uzing LZ77 compression.  level of compression is controlled by
"compression_level" configuration variable.  since compression takes a lot
of cycles for short messages, the variable "compression_threshold" is used
to decide when to compress data, so that short messages go through without
compression

added upload request (607) handler required for downloading from users on
a remote server
