@@ -9,10 +9,7 @@ opennap_SOURCES=opennap.h main.c add_file.c db.c search.c \
 	level.c client_quit.c server_login.c server_connect.c synch.c util.c \
 	md5.c md5.h hotlist.c remove_file.c list_channels.c \
 	list_users.c ping.c resume.c change.c ban.c network.c buffer.c
-#EXTRA_opennap_SOURCES=compress.c	
-#opennap_LDADD=@COMPRESSDOTO@ -L@MYSQLLIBDIR@ -lmysqlclient
 opennap_LDADD=-L@MYSQLLIBDIR@ -lmysqlclient
-#opennap_DEPENDENCIES=@COMPRESSDOTO@
 metaserver_SOURCES=metaserver.c
 #spynap_SOURCES=spynap.c md5c.c
 #spynap_LDADD=-lreadline -ltermcap
